public/assets/css/style.css
/* ... */
.mobi-menu .mobi-menu__logo {
  margin: 5.3rem 0 3rem 0;
  font-size: 3rem !important;
  line-height: 1;
}

.mobi-menu .mobi-menu__socials {
  position: absolute;
  z-index: 1;
  left: 0;
  display: block;
  width: 100%;
  bottom: 3rem;
}

/*FOOTER*/
footer .social-network li {
  margin: 0 !important;
}

.copyright {
  font-size: 0.875rem;
}

/*ELEMENTS*/
/*Pagination*/
ul.page-numbers {
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
  padding-top: 1.5rem;
  border-top: 1px solid rgba(0, 0, 0, 0.15);
  width: 100%;
}

ul.page-numbers i {
  font-size: 0.875em;
}

ul.page-numbers li {
  display: inline-block;
  padding: 0 10px 0 0;
}

ul.page-numbers li a {
  color: rgba(0, 0, 0, 0.54) !important;
}

ul.page-numbers li span.current {
  color: #3500fd !important;
  fill: #3500fd !important;
  display: block;
  text-align: center;
  font-weight: bold;
}

/*Form*/

.form-control {
  height: 50px;
  line-height: 50px;
  padding: 15px;
  background: none;
  border-top: 0;
  border-left: 0;
  border-radius: 0;
  border-right: 0;
  font-size: 0.875rem;
  background: #fff;
  border-radius: 3px;
  border: 1px solid #dee2e6 !important;
}

textarea.form-control {
  min-height: 160px;
  resize: none;
  padding: 10px 20px;
}

.submit-btn {
  font-weight: 600;
  text-transform: uppercase;
  letter-spacing: 2px;
  border: 0;
  border-radius: 50px;
  font-size: 0.875rem;
  padding: 0.8em 1.8em 0.7em;
  font-size: 0.785em;
}

.submit-btn:hover {
  color: #fff;
}

.form-control:focus {
  color: #5f656b;
  background: none;
  outline: 0;
  box-shadow: none;
}

#comments input.submit {
  max-width: 250px;
}

/*ARCHIVE*/

.archive-intro {
  max-width: 500px;
  margin: 0 auto;
  color: rgba(0, 0, 0, 0.54) !important;
}

/*SINGLE POST*/
.single-header {
  padding: 2rem 0 4rem 0;
}

.row-flex figure {
  width: 45%;
}

.row-flex .entry-content {
  justify-content: center;
  align-self: center;
  padding-left: 30px;
  flex: 1;
  text-align: left;
}

.sing-header .meta span {
  margin-right: 10px;
}

.meta .author img {
  height: 30px;
  width: 30px;
  border-radius: 50%;
  display: inline;
  margin: -5px 5px 0 0;
}

.entry-wraper {
  position: relative;
}

.entry-wraper .excerpt {
  color: inherit;
  font-weight: 600;
  font-size: 1.345rem;
}

.entry-main-content {
  line-height: 1.7;
  font-size: 1.25rem;
  margin-bottom: 4rem;
}

.entry-main-content p {
  margin-bottom: 1.5rem;
}

blockquote {
  position: relative;
  border-left: 0;
  padding: 0px 30px;
  font-weight: 400;
  margin-bottom: 1.5rem;
  font-style: italic;
}

blockquote::before {
  content: "";
  top: 0px;
  height: 100%;
  left: 0;
  width: 4px;
  position: absolute;
  background: #000;
}

blockquote p:last-child,
blockquote ul:last-child,
blockquote ol:last-child {
  margin-bottom: 0;
}

/*Social share icons*/
.entry-left-col {
  position: absolute;
  left: -20%;
  height: 200vh;
  z-index: 2;
  top: 3rem;
  bottom: 0;
}

.social-sticky {
  position: -webkit-sticky;
  position: sticky;
  top: 70px;
}

.social-sticky a {
  display: block;
  color: rgba(0, 0, 0, 0.54);
  border-radius: 50%;
  border: 1px solid rgba(0, 0, 0, 0.34);
  width: 30px;
  height: 30px;
  text-align: center;
  line-height: 30px;
  margin-bottom: 0.5rem;
  font-size: 13px;
}

.social-sticky a svg {
  color: rgba(0, 0, 0, 0.54) !important;
  fill: rgba(0, 0, 0, 1) !important;
}

.dropcap p:first-child:first-letter {
  font-size: 4em;
  float: left;
  margin-top: 0.15em;
  margin-right: 0.15em;
  line-height: 1;
}

.dropcap blockquote p:first-child:first-letter {
  font-size: inherit;
  margin: 0;
  line-height: inherit;
  float: none;
}

/*single tags*/
.entry-bottom {
  margin: 0 0 2rem 0;
  font-size: 1.125em;
}

.tags-wrap {
  margin: 1.5rem 0;
}

.tags-wrap a {
  background: rgba(0, 0, 0, 0.05);
  border-radius: 3px;
  font-size: 0.875rem;
  padding: 6px 12px;
  margin-right: 3px;
}

.social-network {
  flex-direction: row;
}

/*Author box*/
.entry-main-content .box.box-author a {
  color: rgba(0, 0, 0, 0.84) !important;
}

.post-author {
  overflow: hidden;
  padding: 50px;
}

.author-img {
  margin-right: 30px;
  position: relative;
}

.author-img > img {
  max-width: 120px;
  border: 3px solid #fff;
  border-radius: 100%;
}

.author-content {
  vertical-align: middle;
}

.post-author .top-author {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.author-content h5 {
  font-size: 1.1rem;
  font-weight: 600;
  padding: 0px 0 10px;
  display: block;
  margin: 0;
}

.author-content p {
  margin: auto;
  color: #555;
}

.post-author .content-social-author {
  padding-top: 15px;
}

.author-content .author-social {
  padding-right: 15px;
  font-size: 16px;
}

/*Related posts*/
.related-posts h3 {
  text-align: center;
}

/*PAGEs*/

/*contact*/
input:focus,
textarea:focus,
button:focus,
select:focus {
  border: 1px solid #888890;
  -webkit-transition: 0.4s;
  -o-transition: 0.4s;
  transition: 0.4s;
  outline: none;
}

input {
  -webkit-appearance: none;
  appearance: none;
  border-radius: 0px;
  height: 40px;
  font-size: 16px;
  padding: 7px 15px;
  background: white;
  border: 1px solid #e1e1e1;
  -webkit-transition: 0.4s;
  -o-transition: 0.4s;
  transition: 0.4s;
  width: 100%;
  color: rgba(0, 0, 0, 0.54);
}

textarea,
button,
select {
  -webkit-appearance: none;
  appearance: none;
  border-radius: 0px;
  font-size: 16px;
  padding: 7px 15px;
  background: white;
  border: 1px solid #ebebeb;
  -webkit-transition: 0.4s;
  -o-transition: 0.4s;
  transition: 0.4s;
  width: 100%;
  color: rgba(0, 0, 0, 0.54);
}

button,
html input[type="button"],
input[type="reset"],
input[type="submit"] {
  color: #fff;
  border-style: solid;
  padding: 0 20px;
  border-radius: 3px;
  cursor: pointer;
  width: unset;
}
/* ... */

